--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,15 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
 
+        //for plagin dagger
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
+        //for retrolambda
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
+
+        //for Butterknife
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
