--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+
+    //cardview
+    compile 'com.android.support:cardview-v7:25.0.+'
+    //recyclerview
+    compile 'com.android.support:recyclerview-v7:25.0.+'
 }
