--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.+'
     //recyclerview
     compile 'com.android.support:recyclerview-v7:25.0.+'
+    //overscrolling
+    compile 'me.everything:overscroll-decor-android:1.0.2'
 }
